# rpi-car-system

./: .codeclimate.yml  .gitignore  .travis.bash  .travis.install.bash  .travis.yml  CONTACT.txt  README.md  buildroot.config  common.pri  rpi-car-system.pro  version.pri
build-os/: .gitignore  build-all.sh  create-update-package.sh  flash-all.sh
build-os/buildroot-patches/: Config.in.patch  buildroot.config  busybox.config  kernel.config  kernel.patch  qt5.patch
build-os/buildroot-patches/ilixi/: Config.in  ilixi.hash  ilixi.mk
build-os/buildroot-patches/libmediainfo/: Config.in  libmediainfo.mk
build-os/buildroot-patches/libvlc/: Config.in  libvlc.hash  libvlc.mk
build-os/buildroot-patches/libzen/: Config.in  libzen.mk
build-os/buildroot-patches/rpi-car-system/: Config.in  rpi-car-system.mk
build-os/buildroot-patches/vlc-qt/: 0001-vlc-qt-disable-widgets-and-qml-and-tests-modules.patch  0001-vlc-qt-disable-widgets-and-qml-modules.patch  0001-vlc-qt-disable-widgets-module.patch  Config.in  vlc-qt.mk
build-os/scripts/: arm-linux.cmake  buildroot.config  fr-latin9.bmap
build-os/scripts/boot/: cmdline.txt  config.txt
build-os/scripts/etc/: directfbrc  fstab  group  inittab  nanorc  passwd  profile  shadow
build-os/scripts/etc/rc.d/: shutdown  startup
build-os/scripts/etc/rc.d/init.d/: udev
build-os/scripts/include/ilixi-1.0.0/: ilixiConfig.h
build-os/scripts/lib/: libilixi-1.0.0-1.0.so.0.0.0
build-os/scripts/share/ilixi-1.0.0/: ilixi_catalog.xml
build-os/scripts/share/ilixi-1.0.0/themes/dark/: style.xml
build-os/scripts/share/ilixi-1.0.0/themes/default/: style.xml
launcher/: .gitignore  CMakeLists.txt  LICENSE.html  ThirdpartyLicenses.xml  launcher.pro  res.qrc
launcher-qml/: .gitignore  launcher-qml.pro  res.qrc
launcher-qml/qml/: Activity.qml  ActivityToolbar.qml  MainMenuButton.qml  main.qml
launcher-qml/qml/music/: ListViewAlbum.qml  ListViewArtist.qml  ListViewTrack.qml  MusicListView.qml  MusicPlayer.qml  MusicQueuePopup.qml
launcher-qml/src/: dirutility.h  main.cpp  mediainfo.cpp  mediainfo.h  soundmanager.cpp  soundmanager.h
launcher/cmake/: FindDirectFB.cmake  FindILIXI.cmake  FindSIGC++.cmake
launcher/i18n/: launcher_fr.ts
launcher/qml/: Activity.qml  ActivityMusic.qml  ActivitySettings.qml  ActivityToolbar.qml  ActivityTransfer.qml  BorderlessButton.qml  CheckBox.qml  ConfirmationPopup.qml  DarkButton.qml  DarkButtonStyle.qml  DarkCheckBox.qml  DarkProgressBar.qml  DarkTextInput.qml  FlatButton.qml  GridMenu.qml  KeyboardPrompt.qml  ListViewBase.qml  MainMenuButton.qml  MainStackView.qml  PasswordPrompt.qml  Popup.qml  PopupButton.qml  ProgressBar.qml  Splash.qml  Style.qml  StyledText.qml  ToolbarIconButton.qml  ToolbarTextButton.qml  WaitPopup.qml  main-firstboot.qml  main.qml
launcher/qml/keyboard/: InputPanel.qml  KeyButton.qml  KeyIconButton.qml  KeyModel.qml
launcher/qml/music/: ListViewAlbum.qml  ListViewArtist.qml  ListViewBase.qml  ListViewPlaylist.qml  ListViewTrack.qml  MusicListView.qml  MusicPlayer.qml  MusicQueuePopup.qml  PlaylistPopup.qml  SelectViewButton.qml
launcher/qml/settings/: SettingsAbout.qml  SettingsClean.qml  SettingsEqualizer.qml  SettingsLanguage.qml  SettingsSystem.qml  SettingsUpdate.qml
launcher/src/: basicbutton.cpp  basicbutton.h  common.h  devicesmanager.cpp  devicesmanager.h  dirutility.h  filereader.h  languagemanager.h  launcherapp.cpp  launcherapp.h  main.cpp  mediainfo.cpp  mediainfo.h  menudialog.cpp  menudialog.h  musicplayer.cpp  musicplayer.h  musicqueuelistmodel.cpp  musicqueuelistmodel.h  passwordmanager.h  soundmanager.cpp  soundmanager.h  stringutility.h  sysinfomanager.h  timer.cpp  timer.h  tshandler.cpp  tshandler.h  updatemanager.h  usbmanager.cpp  usbmanager.h  utility.h
launcher/src/activities/: baseactivity.cpp  baseactivity.h  menuactivity.cpp  menuactivity.h  musicactivity.cpp  musicactivity.h
launcher/src/controls/: abstractprogressbar.cpp  abstractprogressbar.h  abstractstackview.cpp  abstractstackview.h  basicbutton.cpp  basicbutton.h  button.cpp  progressbar.cpp  progressbar.h
launcher/src/core/: common.h  dirutility.h  languagemanager.h  passwordmanager.h  sysinfomanager.cpp
launcher/src/core/mediamanager/: mediainfo.cpp  mediamanager.cpp  mediamanager.h  mediasource.h  playlist.cpp  usbsource.cpp  usbsource.h
launcher/src/gui/: musicplayer.cpp  musicplayer.h  tshandler.cpp
launcher/src/gui/controls/: button.h  stackview.cpp  stackview.h
launcher/src/gui/models/: keyboardlayoutmodel.cpp  keyboardlayoutmodel.h  licenseslistmodel.cpp  licenseslistmodel.h  metadatalistmodel.cpp  metadatalistmodel.h  musiclistmodel.cpp  musiclistmodel.h  musicqueuelistmodel.h  playlistlistmodel.cpp  playlistlistmodel.h
launcher/src/mediamanager/: mediainfo.h  mediamanager.cpp  mediamanager.h  metadatalistmodel.cpp  metadatalistmodel.h  musiclistmodel.cpp  musiclistmodel.h  playlist.h  playlistlistmodel.cpp  playlistlistmodel.h  usbsource.cpp  usbsource.h
launcher/src/widgets/: containerwidget.cpp  containerwidget.h  customicon.cpp  customicon.h  flatbutton.cpp  flatbutton.h  launchertoolbar.cpp  launchertoolbar.h
launcher/theme/: icons.xml
launcher/util/: launcher.sh  qt.conf
musicindex-generator/: musicindex-generator.pro
musicindex-generator/samples/: album-map.xml  artist-map.xml  playlist-XXXX.xml  track-list.xml
musicindex-generator/src/: main.cpp
updater/: updater.pro
updater/src/: decompressutil.h  main.cpp  updatercodes.h
usbhost/: CMakeLists.txt
usbhost/src/: main.cpp  usbmanager.cpp  usbmanager.h
